# leveldbjni

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  LevelDb.cpp  LevelDb.h  MANIFEST.MF  Main.cpp  Main.h  Windows-CMakeLists.txt  build.sh  compileNative.sh  libex.dylib  libleveldbjni.dylib  readme.md
compiled/Darwin/x86_64/: libleveldbjni.dylib
example/src/com/github/vallez/leveldbjni/example/: Main.java
src/: LevelDb.java  Main.java
